--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "framer-motion": "^11.11.11",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "marked": "^15.0.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
