--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -29,7 +30,11 @@
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-slotify": "^0.2.2"
+    "react-slotify": "^0.2.2",
+    "react-tabs": "^6.0.2",
+    "socket.io-client": "^4.8.1",
+    "use-timer": "^2.0.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.1.0",
