--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.1.0",
+    "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/query-sync-storage-persister": "^5.66.0",
     "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-persist-client": "^5.66.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
+    "lodash.debounce": "^4.0.8",
     "marked": "^15.0.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
@@ -40,6 +44,7 @@
     "@chakra-ui/cli": "^3.1.0",
     "@eslint/js": "^9.13.0",
     "@types/compose-function": "^0.0.33",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -50,6 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "prettier": "3.3.3",
+    "sass-embedded": "^1.83.4",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
