--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-persist-client": "^5.66.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.11.11",
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -41,14 +42,14 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@chakra-ui/cli": "^3.1.0",
+    "@chakra-ui/cli": "^2.4.1",
     "@eslint/js": "^9.13.0",
     "@types/compose-function": "^0.0.33",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^1.3.2",
     "compose-function": "^3.0.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
