--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@siberiacancode/reactuse": "^0.0.94",
     "@tanstack/query-sync-storage-persister": "^5.66.0",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-persist-client": "^5.66.0",
     "axios": "^1.7.7",
+    "disable-scroll": "^0.6.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.11.11",
     "i18next": "^23.16.5",
