feat: fix ui and timer

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
     "lodash.debounce": "^4.0.8",
+    "luxon": "^3.5.0",
     "marked": "^15.0.0",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
@@ -48,6 +49,7 @@
     "@eslint/js": "^9.13.0",
     "@types/compose-function": "^0.0.33",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
