--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.479.0",
     "luxon": "^3.5.0",
     "marked": "^15.0.0",
     "next-themes": "^0.4.3",
