--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.1.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.1",
